Added the link to the documentation

--- a/README.mkd
+++ b/README.mkd
@@ -23,6 +23,11 @@ The tool has been tested on *Linux* only, but should work on *MacOS* operating
 systems as well.
 
 
+## Documentation
+
+Documentation is available at http://pgxcentre.github.io/genetest/.
+
+
 ## Installation
 
 Using `pip`:
